<resources>
    <string name="app_name">Dream&amp;Shop</string>

    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="add">Add</string>
    <string name="add_a_photo">Add a Photo</string>
    <string name="youtube_video">Youtube video</string>
    <string name="shopify_product">Shopify product</string>
    <string name="save">Save</string>
    <string name="invalid_email">Email appears to be invalid.</string>
    <string name="no_password">Password not set.</string>
    <string name="no_title">Title not set.</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="choose_product">Choose a product from our Shopify store:</string>
    <string name="subcategory">Subcategory</string>
    <string name="leave">Leave app</string>
    <string name="home">Home</string>
    <string name="delete_dream">Do you want to delete this dream?</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="email_sign_in">Sign in with Email</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="use_email">Use Email</string>
    <string name="want_sign_out">Do you want to sign out?</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="hint_title">Write a title for your layer.</string>
    <string name="adding_media">You can choose a media.</string>
    <string name="creating_layers">Creating layers.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="conn_failed">Connection failed.</string>
    <string name="uid_message">UID is %s.</string>


    <string name="search_hint">Search</string>
    <string name="i_dream_with">I dream with</string>
    <string name="my_dream_is">My dream is</string>
    <string name="what">What is your dream?</string>
    <string name="available_on">Product %s avalible on</string>
    <string name="name">Name</string>
    <string name="creating_a_dream">Creating a dream...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="unknow">Unknow</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google+</string>
</resources>
