<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    style="@style/match_match">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="right"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_back" />

        <View
            style="@style/match_match"
            android:background="@color/dreams_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@color/app_bar_back"
                    android:foregroundGravity="right"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dream_wishlist" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_logo"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />


                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_facebook"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/facebook"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/twiter"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_twitter"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/twitter"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/google"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_google"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/google"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/use_email"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/name"
                        android:inputType="textPersonName" />


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/sign_in"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="@string/sign_in"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/register"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="@string/register"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>

</ScrollView>